busybox.1.28.4.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: busybox
    image: busybox:1.28.4
    command:
      - sleep
      - "100000"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
