centospod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: first-pod
  labels:
    os: centos
spec:
  containers:
  - name: hello
    image: centos:7
    command: ["bash","-c","while true;do date;sleep 10;done"]
