deployment-nginx.withresource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-2
spec:
  selector:
    matchLabels:
      app: my-web-2
      tier: front-end
  replicas: 3
  template:
    metadata:
      labels:
        app: my-web
        tier: front-end
        svc: my-svc
    spec:
      containers:
      - name: my-nginx
        image: nginx:1.18-alpine-perl
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
