deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  selector:
    matchLabels:
      run: my-nginx
  replicas: 2
  strategy:
      # indicate which strategy we want for rolling update
        type: RollingUpdate
        rollingUpdate:
          maxSurge: 1
          maxUnavailable: 1
  template:
    metadata:
      labels:
        run: my-nginx
        forSvc: my-svc
    spec:
      containers:
      - name: my-nginx
        image: nginx:1.19-alpine-perl
        ports:
        - containerPort: 80
