kubectl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubectl
spec:
  containers:
  - name: kubectl
    image: bitnami/kubectl
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
