pod-debug-hostPath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-hostpath
spec:
  containers:
  - name: busybox
    image: busybox:1.28.4
    command: ["sh","-c","while true;do date;sleep 100;done"]
    volumeMounts:
    - name: host-filesys
      mountPath: /host-filesys
  volumes:
    - name: host-filesys
      hostPath:
        path: /
        type: Directory
