service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: my-web
