service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-web
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: my-web
