service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: date
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: 2containers
