ingress-demo1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress1
spec: 
  rules: 
  - host: my-date.com
    http:
       paths:
       - path: / 
         pathType: Prefix
         backend: 
           service:
             name: date
             port: 
               number: 80 
  - host: my-static-web.com
    http:
       paths:
       - path: / 
         pathType: Prefix
         backend: 
           service:
             name: static-web
             port: 
               number: 80
  - host: localhost
    http:
      paths:
      - path: /date
        pathType: Prefix
        backend:
           service:
             name: date
             port:
               number: 80
